Modificacion de frontend

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -30,7 +30,7 @@
         <section id="home-section">
             <div class="hero">
                 <h1>Soluciones Tecnológicas Innovadoras</h1>
-                <p>Transformamos tu negocio con tecnología de vanguardia y servicios personalizados</p>
+                <p>Transformamos tu negocio con tecnología de vanguardia y servicios personalizados con integracion</p>
                 <a href="#servicios" class="btn btn-primary" onclick="showSection('services')">Ver Servicios</a>
             </div>
         </section>
